--- a/FiveSecondsWebApi.Infrastructure/FiveSecondsWebApi.Infrastructure.csproj
+++ b/FiveSecondsWebApi.Infrastructure/FiveSecondsWebApi.Infrastructure.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FiveSecondsWebApi.Domain\FiveSecondsWebApi.Domain.csproj" />
   </ItemGroup>
 
